<resources>
    <string name="app_name">Avariel</string>
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="number_unknown">##</string>

    <!-- Main -->
    <string name="name">Name</string>
    <string name="name_colon">Name: </string>
    <string name="character_name_">Character Name: </string>
    <string name="character_name">Character Name</string>
    <string name="race_colon">Race: </string>
    <string name="raceName">Race</string>
    <string name="alignment_colon">Alignment: </string>
    <string name="alignment">Alignment</string>
    <string name="class_string_colon">Class: </string>
    <string name="class_string">Class</string>
    <string name="current_hp_colon">Current HP: </string>
    <string name="current_hp">Current HP</string>
    <string name="current_hp_icon">Current HP image icon</string>
    <string name="total_hp_colon">Total HP: </string>
    <string name="total_hp">Total HP</string>
    <string name="total_hp_icon">Total HP image icon</string>
    <string name="level_colon">Level: </string>
    <string name="level">Level</string>
    <string name="exp_colon">Exp: </string>
    <string name="exp">Exp</string>
    <string name="save_all">Save All</string>

    <!-- Main - Abilities -->
    <string name="strength_colon">Strength: </string>
    <string name="strength">Strength</string>
    <string name="strength_mod">Strength modifier</string>
    <string name="strength_score">Strength score</string>
    <string name="strength_short">STR</string>
    <string name="strength_icon">Strength image icon</string>
    <string name="dexterity_colon">Dexterity: </string>
    <string name="dexterity">Dexterity</string>
    <string name="dexterity_mod">Dexterity modifier</string>
    <string name="dexterity_score">Dexterity score</string>
    <string name="dexterity_short">DEX</string>
    <string name="dexterity_icon">Dexterity image icon</string>
    <string name="constitution_colon">Constitution: </string>
    <string name="constitution">Constitution</string>
    <string name="constitution_mod">Constitution modifier</string>
    <string name="constitution_score">Constitution score</string>
    <string name="constitution_short">CON</string>
    <string name="constitution_icon">Constitution image icon</string>
    <string name="intelligence_colon">Intelligence: </string>
    <string name="intelligence">Intelligence</string>
    <string name="intelligence_mod">Intelligence modifier</string>
    <string name="intelligence_score">Intelligence score</string>
    <string name="intelligence_short">INT</string>
    <string name="intelligence_icon">Intelligence image icon</string>
    <string name="wisdom_colon">Wisdom: </string>
    <string name="wisdom">Wisdom</string>
    <string name="wisdom_mod">Wisdom modifier</string>
    <string name="wisdom_score">Wisdom score</string>
    <string name="wisdom_short">WIS</string>
    <string name="wisdom_icon">Wisdom image icon</string>
    <string name="charisma_colon">Charisma: </string>
    <string name="charisma">Charisma</string>
    <string name="charisma_mod">Charisma modifier</string>
    <string name="charisma_score">Charisma score</string>
    <string name="charisma_short">CHA</string>
    <string name="charisma_icon">Charisma image icon</string>

    <!-- Adventure - Skills -->
    <string name="skills">Skills</string>
    <string name="acrobatics">Acrobatics (DEX)</string>
    <string name="animal_handling">Animal Handling (WIS)</string>
    <string name="arcana">Arcana (Int)</string>
    <string name="athletics">Athletics (STR)</string>
    <string name="deception">Deception (CHA)</string>
    <string name="history">History (INT)</string>
    <string name="insight">Insight (WIS)</string>
    <string name="intimidation">Intimidation (CHA)</string>
    <string name="investigation">Investigation (INT)</string>
    <string name="medicine">Medicine (WIS)</string>
    <string name="nature">Nature (INT)</string>
    <string name="perception">Perception (WIS)</string>
    <string name="performance">Performance (CHA)</string>
    <string name="persuasion">Persuasion (CHA)</string>
    <string name="religion">Religion (INT)</string>
    <string name="sleight_of_hand">Sleight of Hand (DEX)</string>
    <string name="stealth">Stealth (DEX)</string>
    <string name="survival">Survival (WIS)</string>

    <!-- Adventure Equipment -->
    <string name="equipment">Equipment</string>
    <string name="cost">Cost</string>
    <string name="weight">Weight</string>

    <!-- Combat - Stats -->
    <string name="combat_stats">Combat Stats</string>
    <string name="armor_class">Armor Class</string>
    <string name="initiative">Initiative</string>
    <string name="speed">Speed</string>
    <string name="hit_dice">Hit Dice</string>
    <string name="death_saves">Death Saves</string>
    <string name="successes">Successes</string>
    <string name="failures">Failures</string>
    <string name="features_and_traits">Features &amp; Traits</string>

    <!-- Combat Attack -->
    <string name="attacks_and_spellcasting">Attacks &amp; Spellcasting</string>
    <string name="attacks_and_spellcasting_icon">Attacks &amp; Spellcasting icon</string>
    <string name="add_attack">Add Attack</string>
    <string name="add_weapon_dialog_title">Adding a new Weapon</string>
    <string name="add_weapon_dialog_message">Would you like to pick a weapon from the D&amp;D guide or create your own?</string>
    <string name="dDWeapon">D&amp;D Guide Weapon</string>
    <string name="blankWeapon">Create My Own Weapon</string>
    <string name="select_weapon">Please select a weapon</string>
    <string name="x">x</string>

    <!-- Combat AttackList -->
    <string name="attack_bonus">Attack Bonus</string>
    <string name="ability_bonus">Ability Bonus</string>
    <string name="damage_type">Damage Type</string>
    <string name="number_of_dice">Number of Dice</string>
    <string name="damage_dice_type">Damage Dice Type</string>
    <string name="properties">Properties</string>
    <string name="plus_symbol">+</string>
    <string name="please_choose_the_number_of_dice">Please Choose the Number of dice for:\u0020</string>

    <!-- Misc - Finance -->
    <string name="finance">Finance</string>
    <string name="platinum_colon">Platinum: </string>
    <string name="platinum">Platinum</string>
    <string name="gold_colon">Gold: </string>
    <string name="gold">Gold</string>
    <string name="electrum_colon">Electrum: </string>
    <string name="electrum">Electrum</string>
    <string name="silver_colon">Silver: </string>
    <string name="silver">Silver</string>
    <string name="copper_colon">Copper: </string>
    <string name="copper">Copper</string>

    <!-- Misc - Personal Characteristics -->
    <string name="personal_characteristics">Personal Characteristics</string>
    <string name="personalities_and_traits">Personalities &amp; Traits</string>
    <string name="ideals">Ideals</string>
    <string name="bonds">Bonds</string>
    <string name="flaws">Flaws</string>
    <string name="inspiration">inspiration</string>

    <!-- Misc - Other -->
    <string name="languages">Languages</string>
    <string name="proficiencies">Proficiencies</string>
    <string name="add_proficiency">Add Proficiency</string>
    <string name="bonus_language">Bonus Language</string>
    <string name="notes">Notes</string>

    <!-- Content Description -->
    <string name="content_description_shield">An image of a shield</string>
    <string name="content_description_initiative">Initiative Icon Symbol</string>
    <string name="content_description_speed">Speed Icon Symbol</string>
    <string name="content_description_hit_dice">Hit Dice Icon Symbol</string>

    <string-array name="alignment">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>True Evil</item>
        <item>Chaotic Evil</item>
    </string-array>

    <string-array name="race">
        <item>Dragonborn</item>
        <item>Hill Dwarf</item>
        <item>Mountain Dwarf</item>
        <item>Drow Elf</item>
        <item>High Elf</item>
        <item>Wood Elf</item>
        <item>Rock Gnome</item>
        <item>Forest Gnome</item>
        <item>Half Elf</item>
        <item>Half Orc</item>
        <item>Halfling Lightfoot</item>
        <item>Halfling Stout</item>
        <item>Human</item>
        <item>Tiefling</item>
    </string-array>

    <string-array name="language">
        <item>Common</item>
        <item>Draconic</item>
        <item>Dwarvish</item>
        <item>Elvish</item>
        <item>Giant</item>
        <item>Gnomish</item>
        <item>Goblin</item>
        <item>Halfling</item>
        <item>Infernal</item>
        <item>Orc</item>
    </string-array>

    <string-array name="player_class">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>

    <string-array name="damage_type">
        <item>Piercing</item>
        <item>Bludgeoning</item>
        <item>Slashing</item>
        <item>Piercing, Bludgeoning</item>
        <item>Piercing, Slashing</item>
        <item>Bludgeoning, Slashing</item>
        <item>Piercing, Bludgeoning, Slashing</item>
    </string-array>

    <string-array name="die_type">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
        <item>d100</item>
    </string-array>

    <string-array name="ability_bonus">
        <item>Strength</item>
        <item>Dexterity</item>
        <item>Finesse</item>
    </string-array>

</resources>
