<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <!--Use Gravity to position-->
    <TextView
        android:id="@+id/tv_name_attack_spellcasting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/tv_attack_bonus_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="@dimen/content_attack_spellcasting_spacing"
        android:text="@string/attack_bonus"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/tv_damage_die_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="@dimen/content_attack_spellcasting_spacing"
        android:text="Damage Die Type"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/tv_damage_number_of_die_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="@dimen/content_attack_spellcasting_spacing"
        android:text="Number of Damage Die"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/tv_damage_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="@dimen/content_attack_spellcasting_spacing"
        android:text="@string/damage_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <Button
        android:id="@+id/b_add_attack_spellcasting_row"
        android:layout_width="80dp"
        android:layout_height="@dimen/button_height_min"
        android:layout_marginStart="@dimen/button_start_grid_margin"
        android:text="Add Row" />

</LinearLayout>